Jython NEWS

Jython 2.7a3
  Bugs Fixed
    - [ 1914 ] Float formatting broken in many non-English locales in Jython 2.7
    - [ 1909 ] attrgetter does not parse dotted attributes
    - [ 1924 ] Implement operator.methodcaller
    - [ 1934 ] Break itertools.compress into a separate class 
    - [ 1933 ] Break itertools.cycle into a separate class
    - [ 1932 ] Make check for iterability in chain() arguments lazy
    - [ 1931 ] Check that there are exactly 2 filter args
    - [ 1913 ] Support short -W options
    - [ 1897 ] 2.7.0ax only has partial ssl support
    - array_class in jarray module returns the "Array of a type" class

Jython 2.7a2
    - [ 1892 ] site-packages is not in sys.path

Jython 2.7a1
  Bugs Fixed
    - [ 1880 ] Sha 224 library not present in Jython

Jython 2.5.3b3
  Bugs Fixed
    - [ 1754 ] modjy does not provide appropriate wsgi.input file-like object

Jython 2.5.3b2
  Bugs Fixed
    - [ 1908 ] Patch for 'Unmapped exception: java.net.NoRouteToHostException'
    - [ 1871 ] Relative import in module gets imported to top level (regression)
    - [ 1854 ] set().pop() race condition
    - [ 1730 ] functools.partial incorrectly makes __doc__ property readonly
    - [ 1537 ] expat: org.python.apache.xerces.parsers.SAXParser
    - [ 1268 ] SAX parsers wants to load external DTDs, causing an exception
    - [ 1805 ] threading.Thread always gets name "Thread" instead of a discriminating one
    - [ 1866 ] Parser does not have mismatch token error messages caught by BaseRecognizer
    - [ 1837 ] gderived.py and template Ant target fail on Windows
    - [ 1536 ] NPE in org.python.jsr223.PyScriptEngine:187
    - [ 1640 ] cStringIO does not complain on getvalue after close
    - [ 1721 ] NPE when using JSR 223 (TestCase+Patch)
    - [ 1749 ] function descriptor doesn't work in interactive console
    - [ 1816 ] Jython Interactive Console makes system beep noise too much
    - [ 1829 ] test_socket.py failing on Ubuntu (Oneiric)